--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/MaheshKhairnarGNS/21Oct2024/issues"
   },
-  "homepage": "https://github.com/MaheshKhairnarGNS/21Oct2024#readme"
+  "homepage": "https://github.com/MaheshKhairnarGNS/21Oct2024#readme",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
+  }
 }
